# fireowl_sim_drive

./: .gitignore  README.md  test_carla_connection.py
install/: local_setup.sh  setup.sh
install/carla_ackermann_control/share/carla_ackermann_control/: carla_ackermann_control.launch.py  carla_ros_bridge_with_ackermann_control.launch.py  package.sh  package.xml  settings.yaml
install/carla_ackermann_msgs/share/carla_ackermann_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/carla_ad_agent/share/carla_ad_agent/: carla_ad_agent.launch.py  package.sh  package.xml
install/carla_ad_demo/share/carla_ad_demo/: carla_ad_demo.launch  carla_ad_demo.launch.py  carla_ad_demo_with_scenario.launch  carla_ad_demo_with_scenario.launch.py  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/carla_common/share/carla_common/: package.sh  package.xml
install/carla_lidar_mapping_ros2/share/carla_lidar_mapping_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/carla_manual_control/share/carla_manual_control/: carla_manual_control.launch.py  package.sh  package.xml
install/carla_msgs/share/carla_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/carla_ros_bridge/share/carla_ros_bridge/: carla_ros_bridge.launch.py  carla_ros_bridge_with_example_ego_vehicle.launch.py  package.sh  package.xml
install/carla_ros_scenario_runner/share/carla_ros_scenario_runner/: carla_ros_scenario_runner.launch.py  package.sh  package.xml
install/carla_ros_scenario_runner_types/share/carla_ros_scenario_runner_types/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/carla_spawn_objects/share/carla_spawn_objects/: package.sh
install/carla_twist_to_control/share/carla_twist_to_control/: carla_twist_to_control.launch.py  package.sh  package.xml
install/carla_walker_agent/share/carla_walker_agent/: carla_walker_agent.launch.py  package.sh  package.xml
install/carla_waypoint_publisher/share/carla_waypoint_publisher/: carla_waypoint_publisher.launch.py  package.sh  package.xml
install/carla_waypoint_types/share/carla_waypoint_types/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/: carla_ackermann_control  carla_ackermann_msgs  carla_ad_agent  carla_ad_demo  carla_common  carla_manual_control  carla_msgs  carla_ros_bridge  carla_ros_scenario_runner  carla_ros_scenario_runner_types  carla_spawn_objects  carla_twist_to_control  carla_walker_agent  carla_waypoint_publisher  carla_waypoint_types  docker  docs  packaging  pcl_recorder  ros_compatibility  rqt_carla_control  rviz_carla_plugin
src/carla_lidar_mapping_ros2/: CMakeLists.txt  LIDAR_MAPPING.md  package.xml
src/carla_lidar_mapping_ros2/config/: objects.json
src/carla_lidar_mapping_ros2/include/carla_lidar_mapping_ros2/: lidar_mapping.h
src/carla_lidar_mapping_ros2/launch/: lidar_mapping.launch.py
src/carla_lidar_mapping_ros2/rviz/: mapping.rviz
src/carla_lidar_mapping_ros2/src/: lidar_mapping.cpp  lidar_mapping_node.cpp
src/ros-bridge/carla_msgs/: CMakeLists.txt
src/ros-bridge/pcl_recorder/: CMakeLists.txt
src/ros-bridge/rviz_carla_plugin/: CMakeLists.txt
(+651 files in other folders)
