<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carla_lidar_mapping_ros2</name>
  <version>1.0.0</version>
  <description>The carla_lidar_mapping_ros2 package - LiDAR mapping for CARLA in ROS2</description>
  <maintainer email="fireowlsw@gmail.com">Casper-Auto</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_msgs</depend>
  <depend>libpcl-dev</depend>
  <depend>eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
